--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "weekend_hw",
+  "name": "endangered_animals_app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Laufley.github.io/endangered_animals_App", 
+  "homepage": "https://Laufley.github.io/endangered_animals_app", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run build",
