--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "homepage": "https://Laufley.github.io/endangered_animals_app", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "five": "^0.8.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
   }
 }
+
